# map-consistency

./: CMakeLists.txt  README
cmake/: FindG2O.cmake  FindQGLViewer.cmake
src/consist/: hypothesistester.cpp  hypothesistester.h  mapquality.cpp  mapquality.h  parallelrunner.hpp
src/optimizer/: optimizer.cpp
src/tester/: tester.cpp
